style.css
img {
  height: 400px;
}

.lasagna-photo3 {
  margin-top: 20px;
}

ol,
ul {
  line-height: 30px;
}

.serving-text {
  font-weight: normal;
  font-size: 15px;
  color: grey;
}

tbody td {
  padding: 15px;
}

thead th {
  padding: 5px;
}

.next-recipe {
  margin-left: 25px;
}

